fix: Make Footer scale on Mobile

--- a/docs/src/css/footer.css
+++ b/docs/src/css/footer.css
@@ -3,7 +3,10 @@
 	width: 100%;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	row-gap: 2px;
+	column-gap: 5px;
 }
 
 .footer-social {
@@ -20,4 +23,11 @@
 .footer-privacy {
 	display: flex;
 	flex-direction: column;
+}
+
+/* Reorder items on mobile */
+@media all and (max-width: 450px) {
+.footer-social { order: 1 }
+.footer-privacy { order: 2; }
+.footer-copyright { order: 3; }
 }
